--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,34 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="../dist/output.css">
+    <title>Document</title>
 </head>
 
-<body class="bg-sky-500 ">
-    <header>
-        <nav class="flex items-center justify-between py-7 px-7 border-b-2 border-gray-600">
-            <div class="nav-logo font-black text-[32px]">IfeanyiChukwu</div>
-            <div class="nav-list">
-                <ul class=" ifylex  text-white">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">contact</a></li>
-                </ul>
-
-            </div>
-            <div class="nav-btns text-white">
-                <button type="submit" class="fybtn">Signin</button> <button type="submit" class="fybtn">Signout</button>
-            </div>
+<body class=" font-DM Sans">
+    <header class="hero-header">
+        <nav class=" flex justify-around items-center gap-9 mt-5 text-blue-900">
+            <h2 class="logo font-black text-lg">Startup 3</h2>
+            <ul class="menu flex  gap-7 items-center justify-center">
+                <li class="hover:cursor-pointer">Portfolio</li>
+                <li class="hover:cursor-pointer" >How it works</li>
+                <li class="hover:cursor-pointer" >Pricing</li>
+                <li class="hover:cursor-pointer" >About</li>
+                <li class="hover:cursor-pointer" >Login</li>
+                <li class="Ifeanyi hover:cursor-pointer">SignUp</li>
+            </ul>
         </nav>
+        <div class="hero flex flex-col justify-center items-center ">
+            <h1 class="hero-text font-black font-DM Sans al text-[40px] text-blue-900 ">
+                A high-quality solution startup website quickly
+            </h1>
+        </div>
     </header>
+
 </body>
 
 </html>
