--- a/src/header3.html
+++ b/src/header3.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/output.css">
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
 </head>
 
@@ -20,13 +21,14 @@
                 <li class="hover:cursor-pointer  " >Login</li>
                
             </ul>
-            <div class="form hidden md:block">
+            <div class="form hidden md:flex">
                 <input type="text" placeholder="search"
                     class="border border-sky-700 ifeanyi px-2 gap-y-3 h-11 rounded  "> <button
                     class="Ifeanyi hover:cursor-pointer ">Search</button>
             </div>
-            <div> <button class=" Ifeanyi hover:cursor-pointer ">Signin</button >
-               <button class=" Ifeanyi hover:cursor-pointer  bg-sky-600 text-white"> SignUp</button></div>
+            <div class="  hidden md:flex"> <button class=" Ifeanyi hover:cursor-pointer  ">Signin</button>
+               <button class=" Ifeanyi hover:cursor-pointer  bg-sky-600 text-white "> SignUp</button></div>
+               <i class='bx bx-menu text-[85px] hidden text-blue-700'></i>
         </nav>
         <!-- <div class="hero flex flex-col justify-center items-center ">
             <h1 class="hero-text font-black font-DM Sans al text-[40px] text-blue-900 ">
