--- a/src/header5.html
+++ b/src/header5.html
@@ -15,7 +15,8 @@
         <nav class="flex items-center justify-between mb-12">
             <span class=" text-blue-700 font-bold text-[30px]">Startup 3</span>
             <div class="menu flex items-center gap-5  ">
-                <ul class="menu-link flex justify-around gap-7 mr-5 font-DM Sans text-blue-700 font-semibold">
+                <ul
+                    class="menu-link flex justify-around  hidden gap-7 mr-5 font-DM Sans text-blue-700 font-semibold  lg:flex">
                     <li>Portfolio</li>
                     <li>How it Works</li>
                     <li>Pricing</li>
