--- a/src/header5.html
+++ b/src/header5.html
@@ -10,13 +10,13 @@
     <title>Document</title>
 </head>
 
-<body class=" font-DM Sans">
-    <header class="  mx-auto px-[117px] pt-10 h-screen  ">
+<body class=" font-DM Sans ">
+    <header class=" mt-10 px-5">
         <nav class="flex items-center justify-between mb-12">
             <span class=" text-blue-700 font-bold text-[30px]">Startup 3</span>
-            <div class="menu flex items-center gap-5  ">
+            <div class="  items-center gap-5 md:flex  ">
                 <ul
-                    class="menu-link flex justify-around  hidden gap-7 mr-5 font-DM Sans text-blue-700 font-semibold  lg:flex">
+                    class="menu-link hidden justify-around  gap-7 mr-5 font-DM Sans text-blue-700 font-semibold md:flex">
                     <li>Portfolio</li>
                     <li>How it Works</li>
                     <li>Pricing</li>
@@ -28,21 +28,29 @@
         </nav>
         <section class="flex flex-col items-center justify-center text-center mt-11">
 
-            <div class="font-semibold text-[#1E0E62] text-5xl leading-snug ">A high-quality solution startup <br>
+            <div class="font-semibold text-[#1E0E62] text-3xl leading-snug md:text-5xl leading-snug ">A high-quality solution startup <br>
                 website
                 quickly</div>
             <button
                 class="ml-5 border-grey-700 border-2  my-10 px-5 py-2 rounded-full border-none text-white bg-[#25DAC5]">Get
                 Started</button>
+
+
+
             <img src="./images/Macbook Pro.png" alt="" class="banner  mb-10">
-            <section class="flex justify-center items-center my-9">
-                <p class="text-gray-400 text-lg px-6 ">Startup Framework works on devices supporting Retina Display.
+            <section class="flex flex-col  justify-center items-center my-9 md:flex-row">
+                <p class="text-gray-400 text-lg px-6  border-b-2 border-gray-400 md:border-b-0 border-gray-400">Startup
+                    Framework works
+                    on devices
+                    supporting Retina Display.
                     Feel the clarity in each pixel.</p>
-                <p class="text-gray-400 text-lg px-6 border-x-2 border-gray-400  ">There are a lot of different
+                <p class="text-gray-400 text-lg p-6 border-none md:border-gray-400 border-x-2 ">
+                    There are a lot of different
                     components that will help you
                     create the perfect look and feel for
                     your startup.</p>
-                <p class="text-gray-400 text-lg px-6 ">You can easily combine components in a variety ways for
+                <p class="text-gray-400 text-lg px-6  border-t-2 border-gray-400 md:border-t-0 border-gray-400 ">You can
+                    easily combine components in a variety ways for
                     different design projects. It’s easy!</p>
             </section>
         </section>
