--- a/src/header5.html
+++ b/src/header5.html
@@ -28,7 +28,8 @@
         </nav>
         <section class="flex flex-col items-center justify-center text-center mt-11">
 
-            <div class="font-semibold text-[#1E0E62] text-3xl leading-snug md:text-5xl leading-snug ">A high-quality solution startup <br>
+            <div class="font-semibold text-[#1E0E62] text-3xl leading-snug md:text-5xl leading-snug ">A high-quality
+                solution startup <br>
                 website
                 quickly</div>
             <button
@@ -37,21 +38,24 @@
 
 
 
-            <img src="./images/Macbook Pro.png" alt="" class="banner  mb-10">
-            <section class="flex flex-col  justify-center items-center my-9 md:flex-row">
-                <p class="text-gray-400 text-lg px-6  border-b-2 border-gray-400 md:border-b-0 border-gray-400">Startup
+            <img src="./images/Macbook Pro.png" alt="" class="banner  mb-10 ">
+            <section class="flex flex-col  justify-center items-center my-9 md:flex-row w-[350px]">
+                <p class="text-gray-400 text-lg px-6  border-b-2 border-gray-400 md:border-b-0
+                    border-gray-400 border-r-2">
+                    Startup
                     Framework works
                     on devices
                     supporting Retina Display.
-                    Feel the clarity in each pixel.</p>
-                <p class="text-gray-400 text-lg p-6 border-none md:border-gray-400 border-x-2 ">
-                    There are a lot of different
-                    components that will help you
-                    create the perfect look and feel for
-                    your startup.</p>
-                <p class="text-gray-400 text-lg px-6  border-t-2 border-gray-400 md:border-t-0 border-gray-400 ">You can
-                    easily combine components in a variety ways for
-                    different design projects. It’s easy!</p>
+                    <p class="text-gray-400 text-lg p-6  ">
+                        There are a lot of different
+                        components that will help you
+                        create the perfect look and feel for
+                        your startup.</p>
+                    <p class="text-gray-400 text-lg px-6 border-t-2 border-gray-400 md:border-t-0
+                    border-gray-400 border-l-2 ">
+                        You can
+                        easily combine components in a variety ways for
+                        different design projects. It’s easy!</p>
             </section>
         </section>
 
