--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwindclass projects</title>
     <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    
   
 
 </body>
