--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="">
+    <section class=" flex  justify-center items-center pt-[100px] contain md:pt-[0px]">
+        <div class="m-auto ema flex flex-col mt-[100px]  gap-0 md:flex-row gap-5">
+            <span class="  text-shadow-drop-center flex flex-col md:flex-col justify-center items-center ">
+                <img src="./src/images/29877925.jpg" alt="" class="rounded-full">
+                <button class=" name">IFEANYI CHUKWU</button>
+                <button
+                    class="url ml-5 border-grey-700 border-2  my-10 px-5 py-2 rounded-full border-none text-white bg-[#25DAC5] ">
+                    <a href="./src/header5.html">Click to view project </a></button>
+            </span>
+            <span class=" text-shadow-drop-center flex flex-col md:flex-col justify-center items-center ">
+                <img src="./src/images/29877925.jpg" alt="" class="rounded-full">
+                <button class=" name">YUSUF</button>
+                <button
+                    class="url ml-5 border-grey-700 border-2  my-10 px-5 py-2 rounded-full border-none text-white bg-[#25DAC5] ">
+                    <a href="./src/header4.html">Click to view project </a></button>
+            </span>
+        </div>
+    </section>
 
-    
-  
+
+
 
 </body>
 
