--- a/src/header5.html
+++ b/src/header5.html
@@ -13,10 +13,11 @@
 <body class=" font-DM Sans ">
     <header class=" mt-10 px-5">
         <nav class="flex items-center justify-between mb-12">
-            <span class=" text-blue-700 font-bold text-[30px]">Startup 3</span>
+            <span class=" text-blue-700 font-bold text-[30px]"><a href="../index.html">Startup 3</a></span>
             <div class="  items-center gap-5 md:flex  ">
                 <ul
                     class="menu-link hidden justify-around  gap-7 mr-5 font-DM Sans text-blue-700 font-semibold md:flex">
+                    <li><a href="../index.html">Home</a></li>
                     <li>Portfolio</li>
                     <li>How it Works</li>
                     <li>Pricing</li>
@@ -39,7 +40,9 @@
 
 
             <img src="./images/Macbook Pro.png" alt="" class="banner  mb-10 ">
-            <section class="flex flex-col  justify-center items-center my-9 md:flex-row w-[350px]">
+
+
+            <section class="flex flex-col  justify-center items-center my-9 md:flex-row ">
                 <p class="text-gray-400 text-lg px-6  border-b-2 border-gray-400 md:border-b-0
                     border-gray-400 border-r-2">
                     Startup
