--- a/src/header5.html
+++ b/src/header5.html
@@ -44,7 +44,7 @@
 
             <section class="flex flex-col  justify-center items-center my-9 md:flex-row ">
                 <p class="text-gray-400 text-lg px-6  border-b-2 border-gray-400 md:border-b-0
-                    border-gray-400 border-r-2">
+                    border-gray-400 ">
                     Startup
                     Framework works
                     on devices
@@ -55,7 +55,7 @@
                         create the perfect look and feel for
                         your startup.</p>
                     <p class="text-gray-400 text-lg px-6 border-t-2 border-gray-400 md:border-t-0
-                    border-gray-400 border-l-2 ">
+                    border-gray-400  ">
                         You can
                         easily combine components in a variety ways for
                         different design projects. It’s easy!</p>
