--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="./src/header5.html">Click to view project </a></button>
             </span>
             <span class=" text-shadow-drop-center flex flex-col md:flex-col justify-center items-center ">
-                <img src="./src/images/29877925.jpg" alt="" class="rounded-full">
+                <img src="./src/images/yusuf.jpeg" alt="" class="rounded-full">
                 <button class=" name">YUSUF</button>
                 <button
                     class="url ml-5 border-grey-700 border-2  my-10 px-5 py-2 rounded-full border-none text-white bg-[#25DAC5] ">
