--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <a href="./src/header5.html">Click to view project </a></button>
             </span>
             <span class=" text-shadow-drop-center flex flex-col md:flex-col justify-center items-center ">
-                <img src="./src/images/29877925.jpg" alt="" class="rounded-full">
-                <button class=" name">YUSUF</button>
+                <img src="./src/images/Kenny.jpg" alt="" class="rounded-full object-cover">
+                <button class=" name">Kenny Yusuf</button>
                 <button
                     class="url ml-5 border-grey-700 border-2  my-10 px-5 py-2 rounded-full border-none text-white bg-[#25DAC5] ">
                     <a href="./src/header4.html">Click to view project </a></button>
