--- a/src/header4.html
+++ b/src/header4.html
@@ -7,11 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/output.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <title>Header4</title>
 </head>
 
-<body class=" font-DM Sans">
-    <header class="hero-header">
+<body class=" font-DM Sans ">
+    <header class=" mt-10 px-5">
+        <nav class="flex items-center ml-5 justify-between mb-12">
+            <div class="  items-center gap-5 md:flex  ">
+                <span class=" text-blue-700 font-bold text-[30px]"><a href="../index.html">Startup 3</a></span>
+                <ul
+                    class="menu-link hidden justify-around  gap-7 mr-5 font-DM Sans text-gray-400 font-semibold md:flex">
+                    <li>Features</li>
+                    <li>Downloads</li>
+                    <li>Docs</li>
+                    <li>Support</li>
+                    <li>Blog</li>
+                </ul>
+            </div>
+            <div> 
+            <ul class="menu-link hidden justify-around  gap-7 mr-5 font-DM Sans text-gray-400 font-semibold md:flex">
+                <li class="text-xs">
+                    <li><img src="./images/fa-twitter.png" alt=""></li>
+                   <img src="./images/fa-facebook-square.png" alt="">
+                </li>
+                <li><img src="./images/fa-google-plus.png" alt="">
+            </ul>
+            </div>
+        </nav>
+        <section class="flex flex-col items-center justify-center text-center mt-11">
+
+            <div class="font-semibold text-[#1E0E62] text-3xl leading-snug md:text-5xl leading-snug mt-11">Simple and beautiful ready <br> for use blocks</div>
+
+
+            <img  src="./images/Video.png" alt="" class="banner mt-11  mb-10 ">
+
+        </section>
+
 
     </header>
 
